--- a/popup/settings.css
+++ b/popup/settings.css
@@ -1,21 +1,40 @@
 body {
     background-color: white;
-    padding: 10px;
+    padding: 12px;
     font-family: sans-serif;
 }
 
 #main-container {
     background-color: #EEEEEE;
-    border: 1px solid black;
+    border: 1px solid #999999;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
+    width: 400px;
 }
 
 #reminder-delay-container {
-    background-color: #CCCCCC;
-    border: 1px solid black;
+    background-color: #E0E0E0;
+    border: 1px solid #999999;
     border-radius: 10px;
     padding: 5px;
+    text-align: center;
+}
+
+#reminder-delay-container p {
+    text-align: left;
+}
+
+#reminder-delay-container div {
+    display: inline-block;
+}
+
+#reminder-delay-container div > * {
+    display: inline-block;
+    text-align: center;
+}
+
+#reminder-delay-input {
+    width: 100px;
 }
 
 #submit-button {
@@ -23,4 +42,13 @@ body {
     border: 1px solid #125AB2;
     border-radius: 3px;
     color: white;
+    margin: 15px;
+    padding: 3px;
+    display: inline-block;
+    font-weight: bold;
+}
+
+#submit-button:hover {
+    background: #1070F2;
+    cursor: default;
 }
